--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "module": "ES2020",
     "moduleResolution": "node",
     "paths": {
-      "@app/*": ["src/*"],
+      "@lib/*": ["src/*"],
       "@tests/*": ["tests/*"]
     },
     "resolveJsonModule": true,
