--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.449.0",
+    "@sendgrid/mail": "^7.7.0",
     "fast-safe-stringify": "^2.1.1",
     "winston": "^3.11.0"
   }
