--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,9 @@
     "outDir": "dist",
     "removeComments": true,
 
+    /** Editor Support */
+    "plugins": [{ "transform": "typescript-transform-paths" }, { "transform": "typescript-transform-paths", "afterDeclarations": true }],
+
     /** Interop Constraints */
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
