--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.1",
     "@commitlint/config-conventional": "^18.4.0",
+    "@types/html-minifier": "^4.0.5",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -58,6 +59,8 @@
     "@sendgrid/mail": "^7.7.0",
     "bson": "^6.2.0",
     "fast-safe-stringify": "^2.1.1",
+    "handlebars": "^4.7.8",
+    "html-minifier": "^4.0.0",
     "winston": "^3.11.0"
   }
 }
